force-app/main/default/objects/ConstructionInfo__c/fields/Scope_UPS__c.field-meta.xml
<CustomField>
    <fullName>Scope_UPS__c</fullName>
    <label>工事範囲（ＵＰＳ）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>鉄塔</fullName>
            </value>
            <value>
                <fullName>基礎</fullName>
            </value>
            <value>
                <fullName>土木</fullName>
            </value>
            <value>
                <fullName>建築</fullName>
            </value>
            <value>
                <fullName>機器搬入</fullName>
            </value>
            <value>
                <fullName>機器据付</fullName>
            </value>
            <value>
                <fullName>受電</fullName>
            </value>
            <value>
                <fullName>配管・配線（機器間＋外線）</fullName>
            </value>
            <value>
                <fullName>配管・配線（機器間のみ）</fullName>
            </value>
            <value>
                <fullName>仮設</fullName>
            </value>
            <value>
                <fullName>移設</fullName>
            </value>
            <value>
                <fullName>撤去</fullName>
            </value>
            <value>
                <fullName>機器手配</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>機器間配線</fullName>
            </value>
            <value>
                <fullName>据付</fullName>
            </value>
            <value>
                <fullName>電気（1次）</fullName>
                <isActive>false</isActive>
                <label>電気（1次）</label>
            </value>
            <value>
                <fullName>電気（2次）</fullName>
                <isActive>false</isActive>
                <label>電気（2次）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>