force-app/main/default/objects/ConstructionInfo__c/fields/SEQ_NO__c.field-meta.xml
<CustomField>
    <fullName>SEQ_NO__c</fullName>
    <description>0固定</description>
    <label>【削除予定】ＳＥＱ</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>