force-app/main/default/objects/ConstructionInfo__c/fields/SHUNIN_HITSUYOU_JITSUMU__c.field-meta.xml
<CustomField>
    <fullName>SHUNIN_HITSUYOU_JITSUMU__c</fullName>
    <label>主任技術者の必要実務経験の工事業種</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電気</fullName>
            </value>
            <value>
                <fullName>電気通信</fullName>
            </value>
            <value>
                <fullName>【削除予定】電気及び電気通信</fullName>
            </value>
            <value>
                <fullName>機械</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>