force-app/main/default/objects/ConstructionInfo__c/fields/SHUNIN_HITSUYOU_SHIKAKU__c.field-meta.xml
<CustomField>
    <fullName>SHUNIN_HITSUYOU_SHIKAKU__c</fullName>
    <label>主任技術者の必要資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>一級電気工事施工管理技士</fullName>
            </value>
            <value>
                <fullName>二級電気工事施工管理技士</fullName>
            </value>
            <value>
                <fullName>実務経験</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>