force-app/main/default/objects/ConstructionInfo__c/fields/SITETU_KBN__c.field-meta.xml
<CustomField>
    <fullName>SITETU_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】私鉄</label>
    <type>Checkbox</type>
</CustomField>