force-app/main/default/objects/ConstructionInfo__c/fields/SONOT1_CMT__c.field-meta.xml
<CustomField>
    <fullName>SONOT1_CMT__c</fullName>
    <label>【削除予定】その他１コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>