force-app/main/default/objects/ConstructionInfo__c/fields/SONOT1_KBN__c.field-meta.xml
<CustomField>
    <fullName>SONOT1_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】その他１</label>
    <type>Checkbox</type>
</CustomField>