force-app/main/default/objects/ConstructionInfo__c/fields/SONOT2_KBN__c.field-meta.xml
<CustomField>
    <fullName>SONOT2_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】その他２</label>
    <type>Checkbox</type>
</CustomField>