force-app/main/default/objects/ConstructionInfo__c/fields/SONOT3_KBN__c.field-meta.xml
<CustomField>
    <fullName>SONOT3_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】その他３</label>
    <type>Checkbox</type>
</CustomField>