force-app/main/default/objects/ConstructionInfo__c/fields/SONOTA_YOUKEN__c.field-meta.xml
<CustomField>
    <fullName>SONOTA_YOUKEN__c</fullName>
    <label>その他要件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>