force-app/main/default/objects/ConstructionInfo__c/fields/SubsidiaryCompany__c.field-meta.xml
<CustomField>
    <fullName>SubsidiaryCompany__c</fullName>
    <label>協力会社、担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>