force-app/main/default/objects/ConstructionInfo__c/fields/SUEKIKI_CMT__c.field-meta.xml
<CustomField>
    <fullName>SUEKIKI_CMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>【削除予定】主要納入機器</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>工事情報</relationshipLabel>
    <relationshipName>SUEKIKI_CMTConstructionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>