force-app/main/default/objects/ConstructionInfo__c/fields/SYODAN_NO__c.field-meta.xml
<CustomField>
    <fullName>SYODAN_NO__c</fullName>
    <label>【削除予定】技術者、現代人登録区分 配置システム番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>