force-app/main/default/objects/ConstructionInfo__c/fields/SYOKYAK_KBN__c.field-meta.xml
<CustomField>
    <fullName>SYOKYAK_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】焼却設備</label>
    <type>Checkbox</type>
</CustomField>