force-app/main/default/objects/ConstructionInfo__c/fields/SYUNKO_YMD__c.field-meta.xml
<CustomField>
    <fullName>SYUNKO_YMD__c</fullName>
    <label>【削除予定】竣工日</label>
    <type>Date</type>
</CustomField>