force-app/main/default/objects/ConstructionInfo__c/fields/TAANKEN_KENMU__c.field-meta.xml
<CustomField>
    <fullName>TAANKEN_KENMU__c</fullName>
    <label>他案件との兼務可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可</fullName>
            </value>
            <value>
                <fullName>不可</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>