force-app/main/default/objects/ConstructionInfo__c/fields/TAIYO_KBN__c.field-meta.xml
<CustomField>
    <fullName>TAIYO_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】太陽光</label>
    <type>Checkbox</type>
</CustomField>