force-app/main/default/objects/ConstructionInfo__c/fields/TAIYO_WAT__c.field-meta.xml
<CustomField>
    <fullName>TAIYO_WAT__c</fullName>
    <label>【削除予定】太陽光MW</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>