force-app/main/default/objects/ConstructionInfo__c/fields/TELEM_KBN__c.field-meta.xml
<CustomField>
    <fullName>TELEM_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】テレメータ設備（遠制含）</label>
    <type>Checkbox</type>
</CustomField>