force-app/main/default/objects/ConstructionInfo__c/fields/TO_K_YMD_1__c.field-meta.xml
<CustomField>
    <fullName>TO_K_YMD_1__c</fullName>
    <label>工事期間登録解除日1</label>
    <type>Date</type>
</CustomField>