force-app/main/default/objects/ConstructionInfo__c/fields/TO_K_YMD_2__c.field-meta.xml
<CustomField>
    <fullName>TO_K_YMD_2__c</fullName>
    <label>【削除予定】工事期間登録解除日2</label>
    <type>Date</type>
</CustomField>