force-app/main/default/objects/ConstructionInfo__c/fields/TYUKAN_KBN__c.field-meta.xml
<CustomField>
    <fullName>TYUKAN_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】中央監視（監視制御）</label>
    <type>Checkbox</type>
</CustomField>