force-app/main/default/objects/ConstructionInfo__c/fields/UNTEN_KBN__c.field-meta.xml
<CustomField>
    <fullName>UNTEN_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】運転操作</label>
    <type>Checkbox</type>
</CustomField>