force-app/main/default/objects/ConstructionInfo__c/fields/UPS_KBN__c.field-meta.xml
<CustomField>
    <fullName>UPS_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】ＵＰＳ(単機）</label>
    <type>Checkbox</type>
</CustomField>