force-app/main/default/objects/ConstructionInfo__c/fields/UPS_KVA__c.field-meta.xml
<CustomField>
    <fullName>UPS_KVA__c</fullName>
    <label>【削除予定】ＵＰＳ_KVA</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>