force-app/main/default/objects/ConstructionInfo__c/fields/WC1__c.field-meta.xml
<CustomField>
    <fullName>WC1__c</fullName>
    <label>【削除予定】WC1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>