force-app/main/default/objects/ConstructionInfo__c/fields/WC3__c.field-meta.xml
<CustomField>
    <fullName>WC3__c</fullName>
    <label>【削除予定】WC3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>