force-app/main/default/objects/ConstructionInfo__c/fields/YOUSUI_KBN__c.field-meta.xml
<CustomField>
    <fullName>YOUSUI_KBN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>【削除予定】用水管理（水管理）</label>
    <type>Checkbox</type>
</CustomField>