force-app/main/default/objects/ConstructionInfo__c/validationRules/DAIRININ_KENMU.validationRule-meta.xml
<ValidationRule>
    <fullName>DAIRININ_KENMU</fullName>
    <active>true</active>
    <description>技術者配置の準備で「必要」を選択した場合、「現場代理人との兼務可否」は入力必須です</description>
    <errorConditionFormula>AND(
    ISPICKVAL( HAICHI_JUMBI__c, &quot;必要&quot;),
    ISPICKVAL( DAIRININ_KENMU__c, &quot;&quot; ) ,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorMessage>技術者配置の準備で「必要」を選択した場合、「現場代理人との兼務可否」は入力必須です【DAIRININ_KENMU】</errorMessage>
</ValidationRule>