force-app/main/default/objects/ConstructionInfo__c/validationRules/HAICHI_STATUS.validationRule-meta.xml
<ValidationRule>
    <fullName>HAICHI_STATUS</fullName>
    <active>true</active>
    <description>技術者配置の準備で「必要」を選択した場合、「技術者の配置状況」は入力必須</description>
    <errorConditionFormula>AND(
    ISPICKVAL( HAICHI_JUMBI__c, &quot;必要&quot;),
    ISPICKVAL( HAICHI_STATUS__c, &quot;&quot; ) ,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorMessage>技術者配置の準備で「必要」を選択した場合、「技術者の配置状況」は入力必須です【HAICHI_STATUS】</errorMessage>
</ValidationRule>