force-app/main/default/objects/ConstructionInfo__c/validationRules/NYUSATSU_KBN.validationRule-meta.xml
<ValidationRule>
    <fullName>NYUSATSU_KBN</fullName>
    <active>true</active>
    <description>技術者配置の準備で「必要」を選択した場合、「入札区分」は入力必須</description>
    <errorConditionFormula>AND(
    ISPICKVAL( HAICHI_JUMBI__c, &quot;必要&quot;),
    ISPICKVAL( NYUSATSU_KBN__c, &quot;&quot; ) ,
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorMessage>技術者配置の準備で「必要」を選択した場合、「入札区分」は入力必須です【NYUSATSU_KBN】</errorMessage>
</ValidationRule>