force-app/main/default/objects/ConstructionInfo__c/validationRules/SHUNIN_HITSUYOU_SHIKAKU.validationRule-meta.xml
<ValidationRule>
    <fullName>SHUNIN_HITSUYOU_SHIKAKU</fullName>
    <active>true</active>
    <description>技術者配置の準備で「必要」を選択し、且つ、技術者区分で「主任技術者」を選択した場合、「主任技術者の必要資格」は入力必須です</description>
    <errorConditionFormula>AND(
    ISPICKVAL(HAICHI_JUMBI__c , &quot;必要&quot;),
    ISPICKVAL(GIJUTSUSHA_KBN__c , &quot;主任技術者&quot;),
    ISPICKVAL( SHUNIN_HITSUYOU_SHIKAKU__c, &quot;&quot; ),
    NOT($Profile.Name = &apos;データ移行管理者&apos;)
)</errorConditionFormula>
    <errorMessage>技術者配置の準備で「必要」を選択し、且つ、技術者区分で「主任技術者」を選択した場合、「主任技術者の必要資格」は入力必須です【SHUNIN_HITSUYOU_SHIKAKU】</errorMessage>
</ValidationRule>