force-app/main/default/objects/ConstructionInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opp6__c</columns>
    <columns>ConstructionDistinction__c</columns>
    <columns>KOUKIF_YMD__c</columns>
    <columns>KOUKIT_YMD__c</columns>
    <columns>HAICHI_STATUS__c</columns>
    <columns>GIJUTSUSHA_KBN__c</columns>
    <columns>ConstructionInfoOwnersDivision__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>