force-app/main/default/objects/ConstructionInfo__c/listViews/X141.listView-meta.xml
<ListView>
    <fullName>X141</fullName>
    <columns>NAME</columns>
    <columns>Opp6__c</columns>
    <columns>SubsidiaryCompany__c</columns>
    <columns>ConstructionDistinction__c</columns>
    <columns>KOUKIF_YMD__c</columns>
    <columns>KOUKIT_YMD__c</columns>
    <columns>BASYO_CD__c</columns>
    <columns>B_CD__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ConstructionInfoOwnersDivision__c</field>
        <operation>contains</operation>
        <value>神奈川支社</value>
    </filters>
    <label>14.神奈川支社の工事情報</label>
</ListView>